// <auto-generated />
using System;
using System.Collections.Generic;
using Enlyce.Infrastructure.Persistence;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace Enlyce.Infrastructure.Migrations
{
    [DbContext(typeof(EnlyceDbContext))]
    partial class EnlyceDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Enlyce.Domain.Entities.Asesor", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<bool>("Activo")
                        .HasColumnType("boolean");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)");

                    b.Property<string>("Rol")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Correo", "Enlyce.Domain.Entities.Asesor.Correo#Email", b1 =>
                        {
                            b1.IsRequired();

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(200)
                                .HasColumnType("character varying(200)")
                                .HasColumnName("Correo");
                        });

                    b.HasKey("Id");

                    b.ToTable("Asesores", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.AuditLog", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<string>("Accion")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<string>("DireccionIp")
                        .HasMaxLength(45)
                        .HasColumnType("character varying(45)");

                    b.Property<string>("Entidad")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<Guid?>("EntidadId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("Timestamp")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.HasIndex("Entidad", "EntidadId");

                    b.ToTable("AuditLogs", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Consentimiento", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<string>("DireccionIp")
                        .HasMaxLength(45)
                        .HasColumnType("character varying(45)");

                    b.Property<DateTime>("Fecha")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("LeadId")
                        .HasColumnType("uuid");

                    b.Property<string>("Metodo")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<string>("TextoConsentido")
                        .IsRequired()
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<string>("VersionPolitica")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.HasKey("Id");

                    b.HasIndex("LeadId");

                    b.ToTable("Consentimientos", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Inmueble", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<bool>("Activo")
                        .HasColumnType("boolean");

                    b.Property<int>("Banos")
                        .HasColumnType("integer");

                    b.Property<string>("Descripcion")
                        .IsRequired()
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("FechaVentaArriendo")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("FotosCount")
                        .HasColumnType("integer");

                    b.Property<int>("Habitaciones")
                        .HasColumnType("integer");

                    b.Property<int>("MetrosCuadrados")
                        .HasColumnType("integer");

                    b.Property<string>("Modalidad")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<int>("Parqueaderos")
                        .HasColumnType("integer");

                    b.Property<Guid>("PropietarioId")
                        .HasColumnType("uuid");

                    b.Property<string>("Tipo")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Direccion", "Enlyce.Domain.Entities.Inmueble.Direccion#Direccion", b1 =>
                        {
                            b1.IsRequired();

                            b1.Property<string>("Barrio")
                                .HasMaxLength(100)
                                .HasColumnType("character varying(100)")
                                .HasColumnName("Barrio");

                            b1.Property<string>("Calle")
                                .IsRequired()
                                .HasMaxLength(300)
                                .HasColumnType("character varying(300)")
                                .HasColumnName("Calle");

                            b1.Property<string>("Ciudad")
                                .IsRequired()
                                .HasMaxLength(100)
                                .HasColumnType("character varying(100)")
                                .HasColumnName("Ciudad");
                        });

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Precio", "Enlyce.Domain.Entities.Inmueble.Precio#Dinero", b1 =>
                        {
                            b1.IsRequired();

                            b1.Property<string>("Moneda")
                                .IsRequired()
                                .HasMaxLength(3)
                                .HasColumnType("character varying(3)")
                                .HasColumnName("Moneda");

                            b1.Property<decimal>("Monto")
                                .HasColumnType("decimal(18,2)")
                                .HasColumnName("Precio");
                        });

                    b.HasKey("Id");

                    b.ToTable("Inmuebles", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Interaccion", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("AsesorId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("Fecha")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("LeadId")
                        .HasColumnType("uuid");

                    b.Property<string>("Resumen")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<string>("Tipo")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("Id");

                    b.HasIndex("LeadId");

                    b.ToTable("Interacciones", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Lead", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<bool>("Activo")
                        .HasColumnType("boolean");

                    b.Property<Guid?>("AsesorAsignadoId")
                        .HasColumnType("uuid");

                    b.Property<bool>("AutorizacionDatos")
                        .HasColumnType("boolean");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)");

                    b.Property<string>("EtapaPipeline")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<DateTime>("FechaActualizacion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("FechaAsignacion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("FechaUltimaInteraccion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("FechaUltimoContacto")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Fuente")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<int>("InteraccionesCount")
                        .HasColumnType("integer");

                    b.Property<string>("MotivoCierre")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<string>("NotasCierre")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<string>("TipoOperacion")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)");

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Email", "Enlyce.Domain.Entities.Lead.Email#Email", b1 =>
                        {
                            b1.IsRequired();

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(320)
                                .HasColumnType("character varying(320)")
                                .HasColumnName("Email");
                        });

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Telefono", "Enlyce.Domain.Entities.Lead.Telefono#Telefono", b1 =>
                        {
                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(20)
                                .HasColumnType("character varying(20)")
                                .HasColumnName("Telefono");
                        });

                    b.HasKey("Id");

                    b.HasIndex("AsesorAsignadoId");

                    b.HasIndex("EtapaPipeline");

                    b.ToTable("Leads", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.PoliticaTratamiento", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<bool>("Activa")
                        .HasColumnType("boolean");

                    b.Property<DateTime>("FechaVigencia")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("TextoCompleto")
                        .IsRequired()
                        .HasMaxLength(10000)
                        .HasColumnType("character varying(10000)");

                    b.Property<string>("Version")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.HasKey("Id");

                    b.HasIndex("Version")
                        .IsUnique();

                    b.ToTable("PoliticasTratamiento", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Propietario", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid");

                    b.Property<bool>("Activo")
                        .HasColumnType("boolean");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Email", "Enlyce.Domain.Entities.Propietario.Email#Email", b1 =>
                        {
                            b1.IsRequired();

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(320)
                                .HasColumnType("character varying(320)")
                                .HasColumnName("Email");
                        });

                    b.ComplexProperty(typeof(Dictionary<string, object>), "Telefono", "Enlyce.Domain.Entities.Propietario.Telefono#Telefono", b1 =>
                        {
                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(20)
                                .HasColumnType("character varying(20)")
                                .HasColumnName("Telefono");
                        });

                    b.HasKey("Id");

                    b.ToTable("Propietarios", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Visita", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("AsesorId")
                        .HasColumnType("uuid");

                    b.Property<string>("Estado")
                        .IsRequired()
                        .HasMaxLength(30)
                        .HasColumnType("character varying(30)");

                    b.Property<DateTime>("FechaProgramada")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime?>("FechaRealizada")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Feedback")
                        .HasMaxLength(2000)
                        .HasColumnType("character varying(2000)");

                    b.Property<Guid>("InmuebleId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("LeadId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("AsesorId");

                    b.HasIndex("LeadId");

                    b.ToTable("Visitas", (string)null);
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Consentimiento", b =>
                {
                    b.HasOne("Enlyce.Domain.Entities.Lead", null)
                        .WithMany()
                        .HasForeignKey("LeadId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Interaccion", b =>
                {
                    b.HasOne("Enlyce.Domain.Entities.Lead", null)
                        .WithMany()
                        .HasForeignKey("LeadId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Enlyce.Domain.Entities.Visita", b =>
                {
                    b.HasOne("Enlyce.Domain.Entities.Lead", null)
                        .WithMany()
                        .HasForeignKey("LeadId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });
#pragma warning restore 612, 618
        }
    }
}
