@startuml
title ENLYCE — Clases principales y sus relaciones
top to bottom direction
skinparam backgroundColor #F8F4EA
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontName "Times New Roman"
skinparam defaultFontColor #26352F
skinparam ArrowColor #6B766F
skinparam class {
  BorderColor #66796E
  BackgroundColor #FCFAF4
  HeaderBackgroundColor #E4ECE6
  FontColor #26352F
}
skinparam legend {
  BorderColor #B08A4B
  BackgroundColor #FFF8DF
  FontColor #4D4538
}
hide circle
hide empty methods

class Asesor <<Usuario>> #EFE6D5 {
    +Nombre: texto
    +Correo: correo electrónico
    +Rol: texto
    +Activo: sí / no
}

class "Oportunidad comercial" as Lead <<Entidad principal>> #F1E5E7 {
    +Nombre: texto
    +Correo: correo electrónico
    +Teléfono: texto [opcional]
    +Estado: estado de la oportunidad
    +Etapa: etapa de venta
    +Autoriza datos: sí / no
}

class "Interacción" as Interaccion <<Registro comercial>> #FCF6F7 {
    +Tipo: texto
    +Resumen: texto [opcional]
    +Fecha: fecha y hora
}

class Consentimiento <<Registro comercial>> #FCF6F7 {
    +Fecha: fecha y hora
    +Versión de política: texto
    +Método: texto
}

class Visita <<Registro comercial>> #FCF6F7 {
    +Fecha programada: fecha y hora
    +Fecha realizada: fecha y hora [opcional]
    +Estado: texto
}

Lead "1" -- "0..*" Interaccion : registra
Lead "1" -- "0..*" Consentimiento : autoriza
Lead "1" -- "0..*" Visita : agenda

class Inmueble <<Inventario>> #E4ECE6 {
    +Nombre: texto
    +Tipo: tipo de inmueble
    +Modalidad: venta / arriendo
    +Estado: estado del inmueble
    +Dirección: dirección
    +Precio: dinero
    +Activo: sí / no
}

class Propietario <<Inventario>> #E4ECE6 {
    +Nombre: texto
    +Correo: correo electrónico
    +Teléfono: texto [opcional]
    +Activo: sí / no
}

Asesor "0..1" .. "0..*" Lead
Inmueble "1" .. "0..*" Visita
Propietario "1" .. "0..*" Inmueble

Interaccion -[hidden]right- Consentimiento
Consentimiento -[hidden]right- Visita

legend bottom
  |= Cómo leer el diagrama |
  | Flujo: el asesor atiende oportunidades; cada oportunidad registra interacciones, consentimiento y visitas. |
  | El propietario posee inmuebles y cada inmueble puede recibir visitas. |
  | **1** = exactamente uno · **0..1** = ninguno o uno · **0..*** = ninguno o muchos. |
  | Línea continua: relación configurada en el modelo. Línea punteada: relación conceptual mediante identificador. |
  | Los campos técnicos `Id` y `...Id` se omiten para facilitar la lectura. |
  | En el código, `Guid` es un identificador único y `Guid?` significa que puede estar vacío. |
endlegend
@enduml
